# ai-switcher

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  user-guide.md  vite.config.ts
.claude/: settings.json
.claude/hooks/: verify-stop.sh
.claude/rules/: naming-conventions.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/verification-before-completion/: SKILL.md
.github/workflows/: release.yml
docs/releases/: v0.5.10.md  v0.5.11.md
src/: App.tsx  AutoSessionView.tsx  UsageView.tsx  styles.css  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_gateway.rs  app_state.rs  detection.rs  lib.rs  main.rs  models.rs  pricing.rs  prime.rs  quota.rs  store.rs  tools.rs  tray.rs  usage.rs  wake.rs
