[package]
name = "ai-account-switcher"
version = "0.5.2"
description = "Desktop account manager for AI coding tools"
authors = ["Hoang Phan"]
edition = "2021"

[lib]
name = "ai_account_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
futures-util = "0.3"
keyring = { version = "3.6", features = ["apple-native"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
toml_edit = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
